[metadata]
name = pyrender
version = file: version
license = file: LICENSE
url =  https://github.com/mypaceshun/pyrender
author = KAWAI Shun
author_email = shun at osstech.co.jp

[options]
packages = pyrender
include_package_data = True
install_requires =
	jinja2
	PyYAML
	click

[options.extras_require]
dev =
	venv
	flake8

[options.entry_points]
console_script = 
	pyrender = pyrender.pyrender:main

