[metadata]
name = pyrender
version = attr: pyrender.__VERSION__
license = MIT
license_file = LICENSE
url =  https://github.com/mypaceshun/pyrender
author = KAWAI Shun
author_email = shun at osstech.co.jp
description = Simplate template rensder usesd jinja2
long_description = file: README.md
long_description_content_type=text/markdown
classfiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Natural Language :: Japanese
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
packages = pyrender
zip_safe = false
include_package_data = True
install_requires =
	jinja2
	PyYAML
	click
python_require = '>=3.4'

[options.entry_points]
console_scripts =
	pyrender = pyrender.pyrender:cmd

